# sglang-plugin-FL

./: .pre-commit-config.yaml  README_zh.md  _typos.toml  pyproject.toml
.github/configs/: ascend.yml  cuda.yml  musa.yml  platforms.yml
.github/scripts/: detect_platforms.py  generate_matrix.py  security_audit.py
.github/scripts/ascend/: check.sh  setup.sh
.github/workflows/: _benchmark_test.yml  _build_wheel.yml  _e2e_test.yml  _functional_test.yml  _lint.yml  _notify_feishu.yml  _platform_test.yml  _security_audit.yml  _unit_test.yml  ci.yml  image-builder.yml
container/: containerfile
container/ascend/: containerfile
container/musa/: containerfile
docker/: containerfile
docker/ascend/: containerfile
docker/cuda/: containerfile
docker/musa/: containerfile
examples/: qwen3_6_27b_concurrent.py  qwen3_6_27b_multinode.py  qwen3_6_27b_offline_inference.py  qwen3_6_35b_a3b_concurrent.py  qwen3_6_35b_a3b_multinode.py  qwen3_6_35b_a3b_offline_inference.py
sglang_fl/: __init__.py  platform.py
sglang_fl/dispatch/: __init__.py  builtin_ops.py  logger_manager.py  manager.py  ops.py  policy.py  registry.py  rotary_patch.py  types.py
sglang_fl/distributed/: __init__.py  communicator.py
tests/: README.md  conftest.py  run.py  test_e2e_config.py  test_precision_align.py  validate.sh
tests/benchmarks/: __init__.py  test_benchmark_latency.py  test_benchmark_serve.py  test_benchmark_throughput.py  utils.py
tests/e2e_tests/: plugin_utils.py
tests/functional_tests/: conftest.py
tests/utils/: __init__.py  model_config.py  platform_config.py
(+73 files in other folders)
