# Copyright 2026 FlagOS Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang_fl"
version = "0.1.0"
description = "SGLang OOT Plugin — FlagGems-based multi-chip adaptation"
requires-python = ">=3.8"
dependencies = [
    "flag_gems",
    "pyyaml",
]

[project.entry-points."sglang.srt.platforms"]
sglang_fl = "sglang_fl:activate_platform"

[project.entry-points."sglang.srt.plugins"]
sglang_fl = "sglang_fl:load_plugin"

[tool.setuptools.packages.find]
include = ["sglang_fl*"]

[tool.setuptools.package-data]
"sglang_fl.dispatch.config" = ["*.yaml"]
